--- a/Cotact.html
+++ b/Cotact.html
@@ -22,7 +22,7 @@ body {
     </ul>
    
     
-    <form class="" action="mailto:info@" method="post">
+    <form class="" action="mailto:Dhanola44@gmail.com" method="post">
         
     <table cellspacing="7">
         <tr>
