--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </style>
 <body >
     <table cellspacing="20">
-        <td> <img src="C:\Users\dhano\OneDrive\Documents\Web develoment\images\shubham dhanola pic-modified.png" 
+        <td> <img src="images\shubham dhanola pic-modified.png" 
             width="200"
             height="200"
             alt="Shubham profile picture"></td>
